--- a/BaitapVietIs/src/main/resources/templates/Register.html
+++ b/BaitapVietIs/src/main/resources/templates/Register.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="container mt-5">
-    <h3 align="justify">Registration using Thymeleaf + Spring Data JPA + Spring Boot</h3>
+<!--    <h3 align="justify">Registration using Thymeleaf + Spring Data JPA + Spring Boot</h3>-->
     <div class="card" style="width: 55rem; ">
         <div class="card-header text-center bg-info ">
             <h3>Register</h3>
@@ -18,12 +18,34 @@
         <div class="card-body">
             <form th:action="@{/save}" method="post" th:object="${user}">
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Id</label>
-                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" th:field="*{id}">
+                    <label for="exampleInputEmail1">User Name: </label>
+                    <input type="text" minlength="3" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" th:field="*{userName}">
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Name</label>
-                    <input type="text" class="form-control" id="exampleInputPassword1" th:field="*{name}">
+                    <label for="exampleInputEmail1">Name :</label>
+                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" th:field="*{name}">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Password :</label>
+                    <input type="password" minlength="3" class="form-control" id="exampleInputPassword1" th:field="*{password}">
+                </div>
+                <div class="form-group">
+                    <label for="example">Date of Birth :</label>
+                    <div id="date-picker-example" class="md-form md-outline input-with-post-icon datepicker">
+                        <input placeholder="Select date" type="text" id="example" class="form-control" th:field="*{DateOfBirth}">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlSelect1">Roles :</label>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="User" th:field="*{position}">
+                        <label class="form-check-label" for="inlineRadio1">User</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="Admin" th:field="*{position}">
+                        <label class="form-check-label" for="inlineRadio2">Admin</label>
+                    </div>
+
                 </div>
 
 
