--- a/BaitapVietIs/src/main/resources/templates/Register.html
+++ b/BaitapVietIs/src/main/resources/templates/Register.html
@@ -19,7 +19,7 @@
             <form th:action="@{/save}" method="post" th:object="${user}">
                 <div class="form-group">
                     <label for="exampleInputEmail1">User Name: </label>
-                    <input type="text" name="exampleInputEmail1"  class="form-control"   th:field="*{userName}">
+                    <input type="text" minlength="3" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" th:field="*{userName}">
                 </div>
                 <div class="form-group">
                     <label for="exampleInputEmail1">Name :</label>
