--- a/BaitapVietIs/src/main/resources/templates/WareHouse.html
+++ b/BaitapVietIs/src/main/resources/templates/WareHouse.html
@@ -1,7 +1,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Admin</title>
+    <title>Warehouse</title>
 
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -31,6 +31,20 @@
         }
 
         .add1 {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            z-index: 999999;
+            background-color: rgba(0, 0, 0, 0.75);
+            display: none;
+            justify-content: center;
+            align-items: center;
+
+        }
+        .add3 {
             display: none;
             position: fixed;
             top: 0;
@@ -159,7 +173,7 @@
 
 <div class="container">
 
-    <h3>List Users</h3>
+    <h3>List WareHouse</h3>
 
     <hr/>
 
@@ -169,46 +183,70 @@
         <tr>
             <th>Id</th>
             <th>Name</th>
-<!--            <th>User Name</th>-->
-            <th>Position</th>
-            <th>Date of birth</th>
-            <th>Thêm</th>
+            <th>Adress</th>
+            <th>Chức năng</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="listUser: ${listUser}">
-            <td th:text="${listUser.id}" />
-            <td th:text="${listUser.name}" />
-<!--            <td th:text="${listUser.userName}" />-->
-            <td th:text="${listUser.position}" />
-            <td th:text="${listUser.DateOfBirth}" />
-            <td><form th:action="@{/updateUser}" method="post" ><button class="button1" id="add">update</button></form>
+        <tr th:each="listWareHouse: ${listWareHouse}">
+            <td th:text="${listWareHouse.id}" />
+            <td th:text="${listWareHouse.name}" />
+            <td th:text="${listWareHouse.address}" />
 
-            <button class="button1">Delete</button></td>
+            <td>
+                <button class="button1" id="add" >update</button>
+
+                <div class="add1" style="display: none">
+                    <div class="table1">
+
+                        <h4 style="font-size:18px">Update WareHouse <a href="" style="color:red ; margin-left:140px;font-size:25px">x</a></h4>
+                        <hr>
+                        <div id="div">
+                            <form th:action="@{/updateWarehouse/{id}(id=${listWareHouse.id})}" th:object="${warehouse}" method="post" class="form">
+                                <label th:text="${ 'lable ' + listWareHouse.id}"></label>
+                                <label>Name</label>
+                                <input type="text" minlength="2" maxlength="50" th:field="*{name}">
+                                <!--                <label>User Name</label>-->
+                                <!--                <input type="text" minlength="2" maxlength="50" th:field="*{username}">-->
+                                <label>address</label>
+                                <input type="text" minlength="2" maxlength="50" th:field="*{address}">
+
+                                <input type="submit" value="Update" id="submit">
+
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
+                <form th:action="@{/deleteWarehouse/{id}(id=${listWareHouse.id})}" method="post"><button class="button1">Delete</button></form></td>
 
         </tr>
         </tbody>
 
     </table>
+    <button class="button1" id="add2">Add</button>
 
 </div>
 
-<!--<div class="add1">-->
-<!--    <div class="table1">-->
 
-<!--        <h4 style="font-size:18px">Update User <a href="" style="color:red ; margin-left:140px;font-size:25px">x</a></h4>-->
-<!--        <hr>-->
-<!--        <div id="div">-->
-<!--            <form th:action="@{/updateUser}" th:object="${user}" method="post" class="form">-->
-<!--                <label>Name</label>-->
-<!--                <input type="text" minlength="2" maxlength="50" th:field="*{usser.name}">-->
+<div class="add3">
+    <div class="table1">
 
-<!--                <input type="submit" value="Update" id="submit">-->
+        <h4 style="font-size:18px">Add WareHouse <a href="" style="color:red ; margin-left:140px;font-size:25px">x</a></h4>
+        <hr>
+        <div id="div">
+                        <form th:action="@{/addwarehouse}" th:object="${warehouse}" method="post" class="form">
+                            <label>Name</label>
+                            <input type="text" minlength="2" maxlength="50" th:field="*{name}">
+                            <label>Adress</label>
+                            <input type="text" minlength="2" maxlength="50" th:field="*{address}">
 
-<!--            </form>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
+                            <input type="submit" value="Update" id="submit">
+
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script
@@ -231,7 +269,16 @@
 <script>
     const btnAdd = document.getElementById("add");
     const divAdd = document.querySelector(".add1");
+    const btnAdd1 = document.getElementById("add2");
+    const divAdd1 = document.querySelector(".add3");
 
+    btnAdd1.addEventListener("click", () => {
+        if (divAdd1.style.display == "block") {
+            divAdd1.style.display = "none";
+        } else {
+            divAdd1.style.display = "block";
+        }
+    });
     btnAdd.addEventListener("click", () => {
         if (divAdd.style.display == "block") {
             divAdd.style.display = "none";
@@ -239,6 +286,8 @@
             divAdd.style.display = "block";
         }
     });
+
+
 </script>
 
 </html>
