--- a/BaitapVietIs/src/main/resources/templates/Welcome.html
+++ b/BaitapVietIs/src/main/resources/templates/Welcome.html
@@ -25,7 +25,7 @@
       </div>
       <div class="form-group">
         <label for="exampleInputEmail1">User Name:</label>
-        <span th:text="${user.userName}"></span>
+        <span th:text="${user.username}"></span>
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Password:</label>
@@ -46,7 +46,7 @@
     </div>
 
   </div>
-  <form th:action="@{/Login}" method="get" >
+  <form th:action="@{/login}" method="get" >
     <button type="submit" class="btn btn-primary">Login</button>
   </form>
 </div>
